qtgraphicaleffects-opensource-src (5.9.2-1) UNRELEASED; urgency=medium

  [ Dmitry Shachnev ]
  * New upstream release.
  * Bump Qt build-dependencies to 5.9.2.
  * Call dh_qmlcdeps during build to get proper dependencies.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 15 Oct 2017 22:45:23 +0300

qtgraphicaleffects-opensource-src (5.9.1-2) unstable; urgency=medium

  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 16 Aug 2017 12:29:47 +0300

qtgraphicaleffects-opensource-src (5.9.1-1) experimental; urgency=medium

  * New upstream patch release.
  * Bump Qt build-dependencies to 5.9.1.
  * Add build-dependency on qtdeclarative5-dev-tools, to get QML cache
    files generated.
  * Update debian/copyright for upstream license change.
  * Bump Standards-Version to 4.0.0, no changes needed.
  * Drop obsolete Breaks/Replaces on pre-Jessie Qt 5.2 packages.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 02 Jul 2017 19:13:51 +0300

qtgraphicaleffects-opensource-src (5.9.0-1) experimental; urgency=medium

  * Team upload.
  * New upstream final release.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 16 Jun 2017 03:56:17 -0500

qtgraphicaleffects-opensource-src (5.9.0~rc-1) experimental; urgency=medium

  * New upstream release candidate.
  * Bump Qt build-dependencies to 5.9.0.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 24 May 2017 16:03:28 +0300

qtgraphicaleffects-opensource-src (5.7.1~20161021-3) unstable; urgency=medium

  * Revert the wrong change to install the temporary files.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 02 Nov 2016 11:28:53 +0300

qtgraphicaleffects-opensource-src (5.7.1~20161021-2) unstable; urgency=medium

  * Only install the necessary files into the temporary install root.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Tue, 01 Nov 2016 15:37:09 +0300

qtgraphicaleffects-opensource-src (5.7.1~20161021-1) experimental; urgency=medium

  * New upstream snapshot.