@@ -7,7 +7,7 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
            Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
-Build-Depends: debhelper (>= 9),
+Build-Depends: debhelper (>= 10.3),
                dpkg-dev (>= 1.16.1),
                pkg-kde-tools (>= 0.15.26~),
                qml-module-qtquick-window2 (>= 5.9.2~),
